[metadata]
name = kyoo-log
version = 0.1.0
description = A simple logging library
long_description = file: README.md
long_description_content_type = text/markdown
author = Kyoo-log #Ganti dengan nama anda
author_email = movahmi@gmail.com #Ganti dengan email anda
url = https://github.com/username/kyoo-log #Ganti dengan username dan repo anda